samples/_failures_safe/1761416528_458725_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4238e8a.c: In function ‘main’:
./samples/SAFE/__tmp_c4238e8a.c:176:5: error: expected expression at end of input
  176 |     if (choice_str[0] ==
      |     ^~
./samples/SAFE/__tmp_c4238e8a.c:176:5: error: expected declaration or statement at end of input
